Fix issue of reloading when mainactivity is exited and reentered and Fix issue with date displayed when a word is first looked up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@ Computers.\n
     <string name="search_freq">Search Frequency:</string>
 
     <string name="search_history_menu_item">Search History</string>
+    <string name="an_integer">%d</string>
 </resources>
