Set up Notification for Word of the day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@ Computers.\n
 
     <string name="search_history_menu_item">Search History</string>
     <string name="an_integer">%d</string>
+
+    <string name="word_of_the_day">Word of the Day</string>
+    <string name="todays_word_is">Today\'s word is %s</string>
+    <string name="save_word_and_dismiss">Save Word and Dismiss</string>
 </resources>
